--- a/Assignment/Second/Second.ipynb
+++ b/Assignment/Second/Second.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -23,10 +23,15 @@
     "\n",
     "#importing the tensor flow and numpy\n",
     "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy\n",
     "\n",
     "#initilization of array\n",
+    "A = numpy.asarray([12.4 , 13.5 , 18.7 , 12.8])\n",
+    "B = numpy.asarray([18.8 , 12.4 , 20.5 , 29.9])\n",
     "x = tf.constant([12.4 , 13.5 , 18.7 , 12.8],dtype = tf.float32)\n",
     "y = tf.constant([18.8 , 12.4 , 20.5 , 29.9],dtype = tf.float32)\n",
+    "num = tf.size(x,out_type = tf.float32)\n",
     "\n",
     "#calculating the mean of x and y\n",
     "x_mean = tf.reduce_mean(x)\n",
@@ -36,14 +41,14 @@
     "x_var1 = tf.subtract(x , x_mean)\n",
     "x_var = tf.multiply(x_var1, x_var1)\n",
     "x_var = tf.reduce_sum(x_var)\n",
-    "x_var = tf.divide(x_var,4)\n",
+    "x_var = tf.divide(x_var,num)\n",
     "\n",
     "#calculating co-variance of x and y\n",
     "temp1 = x_var1;\n",
     "temp2 = tf.subtract(y,y_mean)\n",
     "temp = tf.multiply(temp1,temp2)\n",
     "temp = tf.reduce_sum(temp)\n",
-    "temp = tf.divide(temp,4)\n",
+    "temp = tf.divide(temp,num)\n",
     "\n",
     "#Calculate value of m \n",
     "m = tf.divide(temp,x_var)\n",
@@ -51,7 +56,6 @@
     "#Calculate value of c\n",
     "c = tf.multiply(x_mean,m)\n",
     "c = tf.subtract(y_mean ,c)\n",
-    "\n",
     "\n",
     "\n",
     "#starting session to handle exception and graph\n",
@@ -66,6 +70,31 @@
     "    writer.close()\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAD8CAYAAABw1c+bAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFuVJREFUeJzt3XFsnPWd5/H3J05SHOOek8YBYgKBK7XEdku483E9QbvA\ntiRE1Yb27ijZqgJRbdg9Wi2rKnukPe12dVot2pR2K7VqlUIurYQonAgpt2SbptvesaxawIFAAiQt\nGyUXO24ySWqgiYE4/t4f84SbODP2M56xx+Pf5yVZfp7f8/ye5zuj5PPM/OY3fhQRmJlZOmY1ugAz\nM5taDn4zs8Q4+M3MEuPgNzNLjIPfzCwxDn4zs8Q4+M3MEuPgNzNLjIPfzCwxsxtdQDkLFy6MpUuX\nNroMM7OmsWPHjqMR0Zln32kZ/EuXLqW3t7fRZZiZNQ1JB/Lu66EeM7PEOPjNzBLj4DczS4yD38ws\nMeMGv6TzJD0r6UVJL0v6q6x9gaTtkn6V/Z5fof8KSXslvSbp3no/ADMzq06eV/xvAzdGxFXAMmCF\npA8D9wL/GBFXAP+YrZ9FUgvwLeBm4EpgtaQr61X8VNjyQj/X3vdTLrv3Sa6976dseaG/0SWZmdVk\n3OCPot9mq3OynwBWAd/L2r8H3FKm+zXAaxGxLyLeAX6Q9WsKW17oZ93mXfQPDhFA/+AQ6zbvcvib\nWVPLNcYvqUXSTuAIsD0ingEuiIiBbJdfAxeU6doFHCxZ78vayp1jjaReSb2FQiH3A5hM67ftZejU\n6bPahk6dZv22vQ2qyMysdrmCPyJOR8Qy4GLgGkkfHLU9KL4LmLCI2BARPRHR09mZ68tnk+7Q4FBV\n7WZmzaCqWT0RMQj8DFgBHJZ0EUD2+0iZLv3AkpL1i7O2prC4o7WqdjOzZpBnVk+npI5suRX4OLAH\neAK4PdvtduCHZbo/B1wh6TJJc4Hbsn5NYe3yblrntJzV1jqnhbXLuxtUkZlZ7fL8rZ6LgO9lM3Rm\nAY9GxN9L+jnwqKTPAQeAWwEkLQYeiIiVETEs6fPANqAF2BgRL0/KI5kEt1xd/Dhi/ba9HBocYnFH\nK2uXd7/bbmbWjFQcnp9eenp6wn+kzcwsP0k7IqInz77+5q6ZWWIc/GZmiXHwm5klxsFvZpYYB7+Z\nWWIc/GZmiXHwm5klxsFvZpYYB7+ZWWIc/GZmiXHwm5klxsFvZpYYB7+ZWWIc/GZmiXHwm5klxsFv\nZpYYB7+ZWWIc/GZmiXHwm5klZtybrUtaAnwfuAAIYENEfEPSI0B3tlsHMBgRy8r03w+8CZwGhvPe\nE9LMzCbHuMEPDANfjIjnJbUDOyRtj4hPn9lB0v3A62Mc44aIOFpjrWZmVgfjBn9EDAAD2fKbkl4F\nuoBXACQJuBW4cRLrNDOzOqlqjF/SUuBq4JmS5o8AhyPiVxW6BfATSTskrRnj2Gsk9UrqLRQK1ZRl\nZmZVyB38ks4HHgPuiYg3SjatBh4eo+t12dj/zcDdkj5abqeI2BARPRHR09nZmbcsMzOrUq7glzSH\nYug/FBGbS9pnA58CHqnUNyL6s99HgMeBa2op2MzMajNu8Gdj+A8Cr0bE10Zt/hiwJyL6KvRtyz4Q\nRlIbcBOwu7aSzcysFnle8V8LfBa4UdLO7Gdltu02Rg3zSFosaWu2egHwtKQXgWeBJyPiR3Wq3czM\nJiDPrJ6nAVXYdkeZtkPAymx5H3BVbSWamVk9+Zu7ZmaJcfCbmSXGwW9mlhgHv5lZYhz8ZmaJcfCb\nmSXGwW9mlhgHv5lZYhz8ZmaJcfCbmSXGwW9mlhgHv5lZYhz8ZmaJcfCbmSXGwW9mlhgHv5lZYhz8\nZmaJcfCbmSXGwW9mlphxg1/SEkk/k/SKpJcl/WnW/hVJ/WVuwD66/wpJeyW9Juneej8AMzOrzrg3\nWweGgS9GxPOS2oEdkrZn274eEV+t1FFSC/At4ONAH/CcpCci4pVaCzczs4kZ9xV/RAxExPPZ8pvA\nq0BXzuNfA7wWEfsi4h3gB8CqiRZrZma1q2qMX9JS4GrgmazpC5JekrRR0vwyXbqAgyXrfeS/aJiZ\n2STIHfySzgceA+6JiDeAbwOXA8uAAeD+WgqRtEZSr6TeQqFQy6HMzGwMuYJf0hyKof9QRGwGiIjD\nEXE6IkaA71Ic1hmtH1hSsn5x1naOiNgQET0R0dPZ2VnNYzAzsyrkmdUj4EHg1Yj4Wkn7RSW7fRLY\nXab7c8AVki6TNBe4DXiitpLNzKwWeWb1XAt8FtglaWfW9iVgtaRlQAD7gbsAJC0GHoiIlRExLOnz\nwDagBdgYES/X+TGYmVkVxg3+iHgaUJlNWyvsfwhYWbK+tdK+ZmY29fzNXTOzxDj4zcwS4+A3M0uM\ng9/MLDEOfjOzxDj4zcwS4+A3M0uMg9/MLDEOfjOzxDj4zcwS4+A3M0uMg9/MLDEOfjOzxDj4zcwS\n4+A3M0uMg9/MLDEOfjOzxDj4zcwS4+A3M0vMuMEvaYmkn0l6RdLLkv40a18vaY+klyQ9LqmjQv/9\nknZJ2impt94PwMzMqpPnFf8w8MWIuBL4MHC3pCuB7cAHI+JDwC+BdWMc44aIWBYRPTVXbGZmNRk3\n+CNiICKez5bfBF4FuiLixxExnO32C+DiySvTzMzqpaoxfklLgauBZ0ZtuhP4hwrdAviJpB2S1lRb\noJmZ1dfsvDtKOh94DLgnIt4oaf8yxeGghyp0vS4i+iUtArZL2hMRT5U5/hpgDcAll1xSxUMwM7Nq\n5HrFL2kOxdB/KCI2l7TfAXwC+ExERLm+EdGf/T4CPA5cU2G/DRHRExE9nZ2dVT0IMzPLL8+sHgEP\nAq9GxNdK2lcAfw78QUScrNC3TVL7mWXgJmB3PQo3M7OJyfOK/1rgs8CN2ZTMnZJWAt8E2ikO3+yU\n9B0ASYslbc36XgA8LelF4FngyYj4Uf0fhpmZ5TXuGH9EPA2ozKatZdqIiEPAymx5H3BVLQWamVl9\n+Zu7ZmaJcfCbmSXGwW9mlhgHv5lZYhz8ZmaJcfCbmSXGwW9mlhgHv5lZYhz8ZmaJcfCbmSXGwW9m\nlhgHv5lZYhz8ZmaJcfCbmSUm960Xm8nIyAjz589n3rx57/60tbWVXR5rW1tbG+eddx779u2js7OT\nhQsX0tnZSWdnJ62trY1+mGbWxLa80M/6bXs5NDjE4o5W1i7v5paru6bk3DMy+E+fPs2dd97JiRMn\nOHny5Ls/J06cYGBg4N3lM+1DQ0OTXpOkdy8aZy4gpReScstz586d9LrMbOpteaGfdZt3MXTqNAD9\ng0Os27wLYErCXxVuldtQPT090dvbO2XnGxkZYWho6KwLxJnl3/zmNzz66KMUCgWOHj1KoVCgUCjw\n9ttvT1l9ec2ePXvMC8mZ5dILz+zZM/LabzatXXvfT+kfPPcFZ1dHK/98740TOqakHRHRk2df/68H\nZs2aRVtbG21tbWW3r1q1quZznDp1imPHjr174Th69OhZF5LRy0ePHuXUqVNVnWN4eJiBgQEGBgZq\nrreS884775x3LGNdZBYsWEBLS8uk1WPWjA6VCf2x2uvNwT9F5syZw4UXXsiFF144aed4++23372A\nlLuolNtW7Tu+t956i76+Pvr6+ibpUcC8efPGfOcy+ndHRwezZnmegjWPxR2tZV/xL+6Yms8Oxw1+\nSUuA71O8cXoAGyLiG5IWAI8AS4H9wK0R8Zsy/VcA3wBagAci4r66VW9nec973kNXVxddXZM3Rnjy\n5Mmy704qvXM5duzYhM5x4MABDhw4MAmPoKi9vb2qi8t73/tepHK3njar3trl3WeN8QO0zmlh7fLu\nKTn/uGP8ki4CLoqI5yW1AzuAW4A7gOMRcZ+ke4H5EfFfR/VtAX4JfBzoA54DVkfEK2Odc6rH+G36\niAhOnDhR8UJS7oIzODjY6LLLmj9/flXDYm1tbb64JKTes3qqGeOv+sNdST8Evpn9XB8RA9nF4X9H\nRPeoff8D8JWIWJ6trwOIiL8Z6xwOfptMEcHrr79e1TuXN998s9Fll/W+971v3A/xS7d5GvLMNWkf\n7kpaClwNPANcEBFnPkX8NcWhoNG6gIMl633Av6/mnGb1JomOjg46Ojp4//vfPynnGBkZYXBwsKp3\nLidPnqz6PMeOHePYsWPs2bNnEh5FceLDWBeScsuehjz95Q5+SecDjwH3RMQbpW9JIyIk1TQvVNIa\nYA3AJZdcUsuhzBpu1qxZLFiwgAULFtDdPTnjtsPDwxw/fryqdy7VTkMeGRnh8OHDHD58eFIeAxQn\nPuSZfly67mnItcn17EmaQzH0H4qIzVnzYUkXlQz1HCnTtR9YUrJ+cdZ2jojYAGyA4lBPzvrNkjV7\n9mwWLVrEokWLJu0c77zzDsePH6/qncvw8HBV5zh16tSUTEOu5p3L/PnzZ/Q05DyzegQ8CLwaEV8r\n2fQEcDtwX/b7h2W6PwdcIekyioF/G/CHtRZtZlNj7ty5kz4N+a233sr1vZbS9YlMQz548CAHDx4c\nf+cJamtrq+qdSyOnIeeZ1XMd8E/ALmAka/4SxXH+R4FLgAMUp3Mel7SY4rTNlVn/lcDfUZzOuTEi\n/nq8ovzhrpnV08mTJ3MPhxUKBY4fPz5ltXV1ddXlezF1/XA3Ip4GKs0x+/0y+x8CVpasbwW25inG\nzGwyzJs3j0svvZRLL710Uo4fEfz2t7/NPRxWKBR4/fXXAbjrrrsmpaax+BMSM7MaSaK9vZ329nYu\nv/zyRpczLn/P3cwsMQ5+M7PEOPjNzBLj4DczS4yD38wsMTNyVk8j72VpZjbdzbjgb/S9LM3MprsZ\nN9Szftves25uADB06jTrt+1tUEVmZtPLjAv+Rt/L0sxsuptxwV/pnpVTdS9LM7PpbsYF/9rl3bTO\nOfvPqU7lvSzNzKa7Gffh7pkPcD2rx8ysvBkX/FAMfwe9mVl5M26ox8zMxubgNzNLjIPfzCwxDn4z\ns8Q4+M3MEuPgNzNLzLjTOSVtBD4BHImID2ZtjwBnvhHVAQxGxLIyffcDbwKngeG8d4A3M7PJk2ce\n/ybgm8D3zzRExKfPLEu6H3h9jP43RMTRiRZoZmb1NW7wR8RTkpaW2yZJwK3AjfUty8zMJkutY/wf\nAQ5HxK8qbA/gJ5J2SFoz1oEkrZHUK6m3UCjUWJaZmVVSa/CvBh4eY/t12dj/zcDdkj5aaceI2BAR\nPRHR09nZWWNZZmZWyYSDX9Js4FPAI5X2iYj+7PcR4HHgmomez8zM6qOWV/wfA/ZERF+5jZLaJLWf\nWQZuAnbXcD4zM6uDcYNf0sPAz4FuSX2SPpdtuo1RwzySFkvamq1eADwt6UXgWeDJiPhR/Uo3M7OJ\nyDOrZ3WF9jvKtB0CVmbL+4CraqzPzMzqzN/cNTNLjIPfzCwxDn4zs8Q4+M3MEuPgNzNLjIPfzCwx\nDn4zs8Q4+M3MEuPgNzNLjIPfzCwxDn4zs8Q4+M3MEuPgNzNLjIPfzCwxDn4zs8Q4+M3MEuPgNzNL\njIPfzCwxDn4zs8Tkudn6RklHJO0uafuKpH5JO7OflRX6rpC0V9Jrku6tZ+FmZjYxeV7xbwJWlGn/\nekQsy362jt4oqQX4FnAzcCWwWtKVtRRrZma1Gzf4I+Ip4PgEjn0N8FpE7IuId4AfAKsmcBwzM6uj\nWsb4vyDppWwoaH6Z7V3AwZL1vqytLElrJPVK6i0UCjWUZWZmY5lo8H8buBxYBgwA99daSERsiIie\niOjp7Oys9XBmZlbBhII/Ig5HxOmIGAG+S3FYZ7R+YEnJ+sVZm5mZNdCEgl/SRSWrnwR2l9ntOeAK\nSZdJmgvcBjwxkfOZmVn9zB5vB0kPA9cDCyX1AX8JXC9pGRDAfuCubN/FwAMRsTIihiV9HtgGtAAb\nI+LlSXkUZmaWmyKi0TWco6enJ3p7extdhplZ05C0IyJ68uzrb+6amSXGwW9mlhgHv5lZYhz8ZmaJ\ncfCbmSXGwW9mlhgHv5lZYhz8ZmaJcfCbmSXGwW9mlhgHv5lZYhz8ZmaJcfCbmSXGwW9mlhgHv5lZ\nYhz8ZmaJcfCbmSXGwW9mlhgHv5lZYsYNfkkbJR2RtLukbb2kPZJekvS4pI4KffdL2iVppyTfRNfM\nbBrI84p/E7BiVNt24IMR8SHgl8C6MfrfEBHL8t4E2MzMJtfs8XaIiKckLR3V9uOS1V8A/6m+ZVmp\nLS/0s37bXg4NDrG4o5W1y7u55equRpdlZk2qHmP8dwL/UGFbAD+RtEPSmjqcKzlbXuhn3eZd9A8O\nEUD/4BDrNu9iywv9jS7NzJpUTcEv6cvAMPBQhV2ui4hlwM3A3ZI+Osax1kjqldRbKBRqKWtGWb9t\nL0OnTp/VNnTqNOu37W1QRWbW7CYc/JLuAD4BfCYiotw+EdGf/T4CPA5cU+l4EbEhInoioqezs3Oi\nZc04hwaHqmo3MxvPhIJf0grgz4E/iIiTFfZpk9R+Zhm4Cdhdbl+rbHFHa1XtZmbjyTOd82Hg50C3\npD5JnwO+CbQD27Opmt/J9l0saWvW9QLgaUkvAs8CT0bEjyblUcxga5d30zqn5ay21jktrF3e3aCK\nzKzZ5ZnVs7pM84MV9j0ErMyW9wFX1VSdvTt7x7N6zKxexg1+a7xbru5y0JtZ3fhPNpiZJcbBb2aW\nGAe/mVliHPxmZolx8JuZJUYVvnTbUJIKwIFG1zEBC4GjjS6iBs1cv2tvnGaufybVfmlE5PqzB9My\n+JuVpN5m/vPTzVy/a2+cZq4/1do91GNmlhgHv5lZYhz89bWh0QXUqJnrd+2N08z1J1m7x/jNzBLj\nV/xmZolx8E+QpI2SjkjaXdL23yW9lP2p6h9LWtzIGispV3vJti9KCkkLG1FbHhWe+69I6s+e+52S\nVjayxkoqPfeSviBpj6SXJf1to+obS4Xn/ZGS53y/pJ2NrHEsFepfJukXWf29kireLKqRKtR+laSf\nS9ol6X9Jem/e4zn4J24TsGJU2/qI+FB2u8m/B/5iyqvKZxPn1o6kJRRvmPN/p7qgKm2iTP3A1yNi\nWfaztcz26WATo2qXdAOwCrgqIn4H+GoD6spjE6Nqj4hPn3nOgceAzY0oLKdNnPvv5m+Bv8rq/4ts\nfTraxLm1PwDcGxG/S/EOh2vzHszBP0ER8RRwfFTbGyWrbRRvNj/tlKs983WKd1ablnWfMUb9016F\n2v8EuC8i3s72OTLlheUw1vMuScCtwMNTWlQVKtQfwJlXyv8KODSlReVUofYPAE9ly9uB/5j3eA7+\nOpP015IOAp9h+r7iP4ekVUB/RLzY6Fpq8IVsqG2jpPmNLqYKHwA+IukZSf9H0r9rdEET8BHgcET8\nqtGFVOkeYH32f/arwLoG11ONlym+UwT4z8CSvB0d/HUWEV+OiCXAQ8DnG11PHpLmAV+iiS5UZXwb\nuBxYBgwA9ze2nKrMBhYAH6b4dv3R7BV0M1nNNH61P4Y/Af4s+z/7Z1S4u+A0dSfwXyTtoHgr3Hfy\ndnTwT56HqOKtV4P9a+Ay4EVJ+4GLgeclXdjQqqoQEYcj4nREjADfBablh3QV9AGbo+hZYITi32Fp\nCpJmA58CHml0LRNwO///c4n/SRP9u4mIPRFxU0T8W4oX3X/J29fBX0eSrihZXQXsaVQt1YiIXRGx\nKCKWRsRSikH0byLi1w0uLTdJF5WsfhI4Z8bSNLYFuAFA0geAuTTXHw77GLAnIvoaXcgEHAJ+L1u+\nEWiaoSpJi7Lfs4D/Bnwnb1/fc3eCJD0MXA8slNQH/CWwUlI3xVdsB4A/blyFlZWrPSKa5i1uhef+\neknLKH5Ytx+4q2EFjqFC7RuBjdlUvXeA22MafrNyjH83t9EEwzwVnvs/Ar6RvWt5C1jTuAorq1D7\n+ZLuznbZDPyP3Mebhv++zMxsEnmox8wsMQ5+M7PEOPjNzBLj4DczS4yD38wsMQ5+M7PEOPjNzBLj\n4DczS8z/A0faoEeyVnMMAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fce704780b8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Graphic display\n",
+    "fit = numpy.polyfit(A, B, deg=1)\n",
+    "plt.plot(A, fit[0] * A + fit[1], color='black')\n",
+    "plt.scatter(A, B)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
