--- a/Assignment/First/Lab1_assignment.ipynb
+++ b/Assignment/First/Lab1_assignment.ipynb
@@ -21,13 +21,15 @@
     "import numpy as np\n",
     "\n",
     "#assigning the constant value\n",
-    "a = tf.constant(2)\n",
-    "b = tf.constant(5)\n",
-    "asq = tf.multiply(a,a,name = \"a_square\")\n",
-    "bsq = tf.multiply(b,b,name = \"b_square\")\n",
-    "a2 = tf.multiply(2,a, name = \"2a_multiply\")\n",
-    "ab2 = tf.multiply(b,a2,name = \"2ab_multiply\")\n",
-    "result = asq + bsq + ab2\n",
+    "with tf.name_scope(\"Scope_Whole\"):\n",
+    "    a = tf.constant(2)\n",
+    "    b = tf.constant(5)\n",
+    "    with tf.name_scope(\"Scope_Calcuate\"):\n",
+    "        asq = tf.multiply(a,a,name = \"a_square\")\n",
+    "        bsq = tf.multiply(b,b,name = \"b_square\")\n",
+    "        a2 = tf.multiply(2,a, name = \"2a_multiply\")\n",
+    "        ab2 = tf.multiply(b,a2,name = \"2ab_multiply\")\n",
+    "    result = asq + bsq + ab2\n",
     "\n",
     "#starting session to handle exception and graph\n",
     "with tf.Session() as sect:\n",
@@ -57,18 +59,22 @@
     "import numpy as np\n",
     "\n",
     "#assigning the constant value\n",
-    "a = tf.constant(2)\n",
-    "b = tf.constant(5)\n",
-    "c = tf.constant(6)\n",
-    "asq = tf.multiply(a,a,name = \"a_square\")\n",
-    "bsq = tf.multiply(b,b,name = \"b_square\")\n",
-    "a2 = tf.multiply(a,2,name = \"2a_multiply\")\n",
-    "b2 = tf.multiply(b,2,name = \"2b_multiply\")\n",
-    "c2 = tf.multiply(c,2,name = \"2c_multiply\")\n",
-    "ab2 = tf.multiply(b,a2,name = \"2ab_multiply\")\n",
-    "bc2 = tf.multiply(c,b2,name = \"2bc_multiply\")\n",
-    "ca2 = tf.multiply(a,c2,name = \"2ac_multiply\")\n",
-    "result = asq + bsq + ab2 + bc2 + ca2\n",
+    "with tf.name_scope(\"Scope_Whole\"):\n",
+    "    a = tf.constant(2)\n",
+    "    b = tf.constant(5)\n",
+    "    c = tf.constant(6)\n",
+    "    with tf.name_scope(\"Scope_square\"):\n",
+    "        asq = tf.multiply(a,a,name = \"a_square\")\n",
+    "        bsq = tf.multiply(b,b,name = \"b_square\")\n",
+    "    with tf.name_scope(\"Scope_mult2\"):\n",
+    "        a2 = tf.multiply(a,2,name = \"2a_multiply\")\n",
+    "        b2 = tf.multiply(b,2,name = \"2b_multiply\")\n",
+    "        c2 = tf.multiply(c,2,name = \"2c_multiply\")\n",
+    "    with tf.name_scope(\"Scope_mult2a\"):\n",
+    "        ab2 = tf.multiply(b,a2,name = \"2ab_multiply\")\n",
+    "        bc2 = tf.multiply(c,b2,name = \"2bc_multiply\")\n",
+    "        ca2 = tf.multiply(a,c2,name = \"2ac_multiply\")\n",
+    "    result = asq + bsq + ab2 + bc2 + ca2\n",
     "\n",
     "#starting session to handle exception and graph\n",
     "with tf.Session() as sect:\n",
